--- a/frontend/frontend.html
+++ b/frontend/frontend.html
@@ -1,193 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>API Tester</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .container {
-      margin-top: 50px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>API Test Frontend</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+
 <body>
-  <div class="container">
-    <h1>API Tester</h1>
+    <div class="container mt-5">
+        <h1 class="text-center">API Test Frontend</h1>
 
-    <!-- Transcribe API -->
-    <h2>Transcribe Audio</h2>
-    <form id="transcribeForm">
-      <div class="mb-3">
-        <label for="audioFile" class="form-label">Choose an audio file:</label>
-        <input type="file" class="form-control" id="audioFile" name="audio" accept="audio/*" required>
-      </div>
-      <div class="mb-3">
-        <label for="languageCode" class="form-label">Language Code:</label>
-        <input type="text" class="form-control" id="languageCode" name="languageCode" value="en-US">
-      </div>
-      <button type="submit" class="btn btn-primary">Transcribe</button>
-    </form>
-    <div id="transcriptionResult" class="mt-3"></div>
+        <!-- Transcription Form -->
+        <div class="card mt-4">
+            <div class="card-header">Transcription</div>
+            <div class="card-body">
+                <form id="transcriptionForm">
+                    <div class="form-group">
+                        <label for="audioFile">Upload Audio File</label>
+                        <input type="file" class="form-control" id="audioFile" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="languageCode">Language Code</label>
+                        <input type="text" class="form-control" id="languageCode" value="en-US" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Transcribe</button>
+                </form>
+                <div class="mt-3" id="transcriptionResult"></div>
+            </div>
+        </div>
 
-    <!-- Synthesize API -->
-    <h2>Synthesize Text to Speech</h2>
-    <form id="synthesizeForm">
-      <div class="mb-3">
-        <label for="synthesizeText" class="form-label">Text to Synthesize:</label>
-        <textarea class="form-control" id="synthesizeText" name="text" rows="3" required></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="synthesizeLanguageCode" class="form-label">Language Code:</label>
-        <input type="text" class="form-control" id="synthesizeLanguageCode" name="languageCode" value="en-US">
-      </div>
-      <button type="submit" class="btn btn-primary">Synthesize</button>
-    </form>
-    <audio id="audioPlayer" controls class="mt-3"></audio>
+        <!-- Text-to-Speech Form -->
+        <div class="card mt-4">
+            <div class="card-header">Text-to-Speech</div>
+            <div class="card-body">
+                <form id="synthesisForm">
+                    <div class="form-group">
+                        <label for="textToSynthesize">Text</label>
+                        <input type="text" class="form-control" id="textToSynthesize" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="synthesisLanguageCode">Language Code</label>
+                        <input type="text" class="form-control" id="synthesisLanguageCode" value="en-US" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Synthesize</button>
+                </form>
+                <div class="mt-3" id="synthesisResult"></div>
+            </div>
+        </div>
 
-    <!-- Translate API -->
-    <h2>Translate Text</h2>
-    <form id="translateForm">
-      <div class="mb-3">
-        <label for="translateText" class="form-label">Text to Translate:</label>
-        <textarea class="form-control" id="translateText" name="text" rows="3" required></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="sourceLanguage" class="form-label">Source Language:</label>
-        <input type="text" class="form-control" id="sourceLanguage" name="sourceLanguage" value="en">
-      </div>
-      <div class="mb-3">
-        <label for="targetLanguage" class="form-label">Target Language:</label>
-        <input type="text" class="form-control" id="targetLanguage" name="targetLanguage" value="es">
-      </div>
-      <button type="submit" class="btn btn-primary">Translate</button>
-    </form>
-    <div id="translationResult" class="mt-3"></div>
+        <!-- Translation Form -->
+        <div class="card mt-4">
+            <div class="card-header">Translation</div>
+            <div class="card-body">
+                <form id="translationForm">
+                    <div class="form-group">
+                        <label for="textToTranslate">Text</label>
+                        <input type="text" class="form-control" id="textToTranslate" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="sourceLanguage">Source Language</label>
+                        <input type="text" class="form-control" id="sourceLanguage" value="en" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="targetLanguage">Target Language</label>
+                        <input type="text" class="form-control" id="targetLanguage" value="ur" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Translate</button>
+                </form>
+                <div class="mt-3" id="translationResult"></div>
+            </div>
+        </div>
 
-    <!-- File Upload -->
-    <h2>Upload File</h2>
-    <form id="uploadForm">
-      <div class="mb-3">
-        <label for="file" class="form-label">Choose a file:</label>
-        <input type="file" class="form-control" id="file" name="file" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Upload</button>
-    </form>
-    <div id="uploadResult" class="mt-3"></div>
+        <!-- File Upload Form -->
+        <div class="card mt-4">
+            <div class="card-header">File Upload</div>
+            <div class="card-body">
+                <form id="fileUploadForm">
+                    <div class="form-group">
+                        <label for="fileToUpload">Upload File</label>
+                        <input type="file" class="form-control" id="fileToUpload" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Upload</button>
+                </form>
+                <div class="mt-3" id="fileUploadResult"></div>
+            </div>
+        </div>
 
-    <!-- File Download -->
-    
-  </div>
+        <!-- Transcription from URL Form -->
+        <div class="card mt-4">
+            <div class="card-header">Transcription from URL</div>
+            <div class="card-body">
+                <form id="transcriptionFromUrlForm">
+                    <div class="form-group">
+                        <label for="audioUrl">Audio URL</label>
+                        <input type="text" class="form-control" id="audioUrl" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="urlLanguageCode">Language Code</label>
+                        <input type="text" class="form-control" id="urlLanguageCode" value="en-US" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Transcribe</button>
+                </form>
+                <div class="mt-3" id="transcriptionFromUrlResult"></div>
+            </div>
+        </div>
+    </div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Custom JavaScript -->
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-  const baseURL = "http://localhost:3000"; // Replace with your server URL
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script >
+        const baseUrl = 'http://localhost:3000';
 
-  // Transcribe form submission
-  document.getElementById("transcribeForm").addEventListener("submit", async (event) => {
-    event.preventDefault();
-    const formData = new FormData(event.target);
-    try {
-      const response = await fetch(`${baseURL}/transcribe`, {
-        method: "POST",
-        body: formData,
-      });
-      const data = await response.json();
-      document.getElementById("transcriptionResult").textContent = data.transcription;
-    } catch (error) {
-      console.error("Error:", error);
-      alert("An error occurred during transcription.");
-    }
-  });
+            // Transcription form submission
+            document.getElementById('transcriptionForm').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const formData = new FormData();
+                formData.append('audio', document.getElementById('audioFile').files[0]);
+                formData.append('languageCode', document.getElementById('languageCode').value);
 
-  // Synthesize form submission
-  document.getElementById("synthesizeForm").addEventListener("submit", async (event) => {
-    event.preventDefault();
-    const formData = new FormData(event.target);
-    try {
-      const response = await fetch(`${baseURL}/synthesize`, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify(Object.fromEntries(formData)),
-      });
-      const blob = await response.blob();
-      const audioPlayer = document.getElementById("audioPlayer");
-      audioPlayer.src = URL.createObjectURL(blob);
-      audioPlayer.play();
-    } catch (error) {
-      console.error("Error:", error);
-      alert("An error occurred during text-to-speech synthesis.");
-    }
-  });
+                const response = await fetch(`${baseUrl}/transcribe`, {
+                    method: 'POST',
+                    body: formData
+                });
 
-  // Translate form submission
-  document.getElementById("translateForm").addEventListener("submit", async (event) => {
-    event.preventDefault();
-    const formData = new FormData(event.target);
-    try {
-      const response = await fetch(`${baseURL}/translate`, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify(Object.fromEntries(formData)),
-      });
-      const data = await response.json();
-      document.getElementById("translationResult").textContent = data.translation;
-    } catch (error) {
-      console.error("Error:", error);
-      alert("An error occurred during translation.");
-    }
-  });
+                const result = await response.json();
+                document.getElementById('transcriptionResult').innerText = result.transcription || result.error;
+            });
 
-  // Upload form submission
-  document.getElementById("uploadForm").addEventListener("submit", async (event) => {
-    event.preventDefault();
-    const formData = new FormData(event.target);
-    try {
-      const response = await fetch(`${baseURL}/storage/file`, {
-        method: "POST",
-        body: formData,
-      });
-      const data = await response.json();
-      document.getElementById("uploadResult").textContent = `File uploaded successfully. URL: ${data.fileUrl}`;
-    } catch (error) {
-      console.error("Error:", error);
-      alert("An error occurred during file upload.");
-    }
-  });
+            // Text-to-Speech form submission
+            document.getElementById('synthesisForm').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const text = document.getElementById('textToSynthesize').value;
+                const languageCode = document.getElementById('synthesisLanguageCode').value;
 
-  // Download form submission
-  document.getElementById("downloadForm").addEventListener("submit", async (event) => {
-    event.preventDefault();
-    const fileName = document.getElementById("fileName").value.trim();
-    if (!fileName) {
-      alert("Please enter a file name.");
-      return;
-    }
-    try {
-      const response = await fetch(`${baseURL}/storage/file/${fileName}`);
-      if (!response.ok) {
-        throw new Error(`File ${fileName} not found.`);
-      }
-      const blob = await response.blob();
-      const downloadLink = document.getElementById("downloadLink");
-      downloadLink.href = URL.createObjectURL(blob);
-      downloadLink.download = fileName;
-      downloadLink.classList.remove("d-none");
-    } catch (error) {
-      console.error("Error:", error);
-      alert("An error occurred during file download.");
-    }
-  });
-});
+                const response = await fetch(`${baseUrl}/synthesize`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ text, languageCode })
+                });
 
-  </script>
+                const result = await response.blob();
+                const url = URL.createObjectURL(result);
+                document.getElementById('synthesisResult').innerHTML = `<audio controls src="${url}"></audio>`;
+            });
+
+            // Translation form submission
+            document.getElementById('translationForm').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const text = document.getElementById('textToTranslate').value;
+                const sourceLanguage = document.getElementById('sourceLanguage').value;
+                const targetLanguage = document.getElementById('targetLanguage').value;
+
+                const response = await fetch(`${baseUrl}/translate`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ text, sourceLanguage, targetLanguage })
+                });
+
+                const result = await response.json();
+                document.getElementById('translationResult').innerText = result.translation || result.error;
+            });
+
+            // File upload form submission
+            document.getElementById('fileUploadForm').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const formData = new FormData();
+                formData.append('file', document.getElementById('fileToUpload').files[0]);
+
+                const response = await fetch(`${baseUrl}/storage/file`, {
+                    method: 'POST',
+                    body: formData
+                });
+
+                const result = await response.json();
+                document.getElementById('fileUploadResult').innerText = result.fileUrl || result.error;
+            });
+
+            // Transcription from URL form submission
+            document.getElementById('transcriptionFromUrlForm').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const audioUrl = document.getElementById('audioUrl').value;
+                const languageCode = document.getElementById('urlLanguageCode').value;
+
+                const response = await fetch(`${baseUrl}/transcribeFromUrl`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ audioUrl, languageCode })
+                });
+
+                const result = await response.json();
+                document.getElementById('transcriptionFromUrlResult').innerText = result.transcription || result.error;
+            });
+
+    </script>
 </body>
+
 </html>
