--- a/frontend/frontend.html
+++ b/frontend/frontend.html
@@ -1,206 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Speech and Translation Service</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f9;
+        color: #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Test Frontend</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
+      .container {
+        background-color: white;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        width: 100%;
+      }
 
-<body>
-    <div class="container mt-5">
-        <h1 class="text-center">API Test Frontend</h1>
+      h1 {
+        text-align: center;
+        margin-bottom: 20px;
+      }
 
-        <!-- Transcription Form -->
-        <div class="card mt-4">
-            <div class="card-header">Transcription</div>
-            <div class="card-body">
-                <form id="transcriptionForm">
-                    <div class="form-group">
-                        <label for="audioFile">Upload Audio File</label>
-                        <input type="file" class="form-control" id="audioFile" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="languageCode">Language Code</label>
-                        <input type="text" class="form-control" id="languageCode" value="en-US" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Transcribe</button>
-                </form>
-                <div class="mt-3" id="transcriptionResult"></div>
-            </div>
-        </div>
+      .section {
+        margin-bottom: 20px;
+      }
 
-        <!-- Text-to-Speech Form -->
-        <div class="card mt-4">
-            <div class="card-header">Text-to-Speech</div>
-            <div class="card-body">
-                <form id="synthesisForm">
-                    <div class="form-group">
-                        <label for="textToSynthesize">Text</label>
-                        <input type="text" class="form-control" id="textToSynthesize" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="synthesisLanguageCode">Language Code</label>
-                        <input type="text" class="form-control" id="synthesisLanguageCode" value="en-US" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Synthesize</button>
-                </form>
-                <div class="mt-3" id="synthesisResult"></div>
-            </div>
-        </div>
+      .section h2 {
+        margin-bottom: 10px;
+      }
 
-        <!-- Translation Form -->
-        <div class="card mt-4">
-            <div class="card-header">Translation</div>
-            <div class="card-body">
-                <form id="translationForm">
-                    <div class="form-group">
-                        <label for="textToTranslate">Text</label>
-                        <input type="text" class="form-control" id="textToTranslate" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="sourceLanguage">Source Language</label>
-                        <input type="text" class="form-control" id="sourceLanguage" value="en" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="targetLanguage">Target Language</label>
-                        <input type="text" class="form-control" id="targetLanguage" value="ur" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Translate</button>
-                </form>
-                <div class="mt-3" id="translationResult"></div>
-            </div>
-        </div>
+      label {
+        display: block;
+        margin-bottom: 5px;
+      }
 
-        <!-- File Upload Form -->
-        <div class="card mt-4">
-            <div class="card-header">File Upload</div>
-            <div class="card-body">
-                <form id="fileUploadForm">
-                    <div class="form-group">
-                        <label for="fileToUpload">Upload File</label>
-                        <input type="file" class="form-control" id="fileToUpload" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Upload</button>
-                </form>
-                <div class="mt-3" id="fileUploadResult"></div>
-            </div>
-        </div>
+      input[type="text"],
+      input[type="file"],
+      textarea {
+        width: calc(100% - 22px);
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
 
-        <!-- Transcription from URL Form -->
-        <div class="card mt-4">
-            <div class="card-header">Transcription from URL</div>
-            <div class="card-body">
-                <form id="transcriptionFromUrlForm">
-                    <div class="form-group">
-                        <label for="audioUrl">Audio URL</label>
-                        <input type="text" class="form-control" id="audioUrl" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="urlLanguageCode">Language Code</label>
-                        <input type="text" class="form-control" id="urlLanguageCode" value="en-US" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Transcribe</button>
-                </form>
-                <div class="mt-3" id="transcriptionFromUrlResult"></div>
-            </div>
-        </div>
+      button {
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      button:hover {
+        background-color: #0056b3;
+      }
+
+      p {
+        margin-top: 10px;
+        font-style: italic;
+        color: #666;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Speech and Translation Service</h1>
+
+      <!-- Transcription Section -->
+      <div class="section">
+        <h2>Transcribe Audio</h2>
+        <form id="transcribeForm">
+          <label for="transcribeFile">Select an audio file:</label>
+          <input type="file" id="transcribeFile" name="audio" />
+          <label for="transcribeLang">Language Code:</label>
+          <input
+            type="text"
+            id="transcribeLang"
+            name="languageCode"
+            placeholder="en-US"
+          />
+          <button type="submit">Transcribe</button>
+        </form>
+        <p id="transcribeResult"></p>
+      </div>
+
+      <!-- Text-to-Speech Section -->
+      <div class="section">
+        <h2>Text-to-Speech</h2>
+        <form id="synthesizeForm">
+          <label for="synthesizeText">Enter text:</label>
+          <textarea id="synthesizeText" name="text" rows="4"></textarea>
+          <label for="synthesizeLang">Language Code:</label>
+          <input
+            type="text"
+            id="synthesizeLang"
+            name="languageCode"
+            placeholder="en-US"
+          />
+          <button type="submit">Synthesize</button>
+        </form>
+        <p id="synthesizeResult"></p>
+      </div>
+
+      <!-- Translation Section -->
+      <div class="section">
+        <h2>Translate Text</h2>
+        <form id="translateForm">
+          <label for="translateText">Enter text:</label>
+          <textarea id="translateText" name="text" rows="4"></textarea>
+          <label for="sourceLang">Source Language Code:</label>
+          <input
+            type="text"
+            id="sourceLang"
+            name="sourceLanguage"
+            placeholder="en"
+          />
+          <label for="targetLang">Target Language Code:</label>
+          <input
+            type="text"
+            id="targetLang"
+            name="targetLanguage"
+            placeholder="es"
+          />
+          <button type="submit">Translate</button>
+        </form>
+        <p id="translateResult"></p>
+      </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script >
-        const baseUrl = 'http://localhost:3000';
+    <script>
+      document
+        .getElementById("transcribeForm")
+        .addEventListener("submit", async function (e) {
+          e.preventDefault();
+          const formData = new FormData();
+          formData.append(
+            "audio",
+            document.getElementById("transcribeFile").files[0]
+          );
+          formData.append(
+            "languageCode",
+            document.getElementById("transcribeLang").value
+          );
 
-            // Transcription form submission
-            document.getElementById('transcriptionForm').addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const formData = new FormData();
-                formData.append('audio', document.getElementById('audioFile').files[0]);
-                formData.append('languageCode', document.getElementById('languageCode').value);
+          const response = await fetch("http://localhost:3000/transcribe", {
+            method: "POST",
+            body: formData,
+          });
+          const result = await response.json();
+          document.getElementById("transcribeResult").innerText =
+            result.transcription || result.error;
+        });
 
-                const response = await fetch(`${baseUrl}/transcribe`, {
-                    method: 'POST',
-                    body: formData
-                });
+      document
+        .getElementById("synthesizeForm")
+        .addEventListener("submit", async function (e) {
+          e.preventDefault();
+          const data = {
+            text: document.getElementById("synthesizeText").value,
+            languageCode: document.getElementById("synthesizeLang").value,
+          };
 
-                const result = await response.json();
-                document.getElementById('transcriptionResult').innerText = result.transcription || result.error;
-            });
+          const response = await fetch("http://localhost:3000/synthesize", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+          });
+          const result = await response.json();
+          document.getElementById("synthesizeResult").innerText =
+            result.filePath || result.error;
+        });
 
-            // Text-to-Speech form submission
-            document.getElementById('synthesisForm').addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const text = document.getElementById('textToSynthesize').value;
-                const languageCode = document.getElementById('synthesisLanguageCode').value;
+      document
+        .getElementById("translateForm")
+        .addEventListener("submit", async function (e) {
+          e.preventDefault();
+          const data = {
+            text: document.getElementById("translateText").value,
+            sourceLanguage: document.getElementById("sourceLang").value,
+            targetLanguage: document.getElementById("targetLang").value,
+          };
 
-                const response = await fetch(`${baseUrl}/synthesize`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ text, languageCode })
-                });
-
-                const result = await response.blob();
-                const url = URL.createObjectURL(result);
-                document.getElementById('synthesisResult').innerHTML = `<audio controls src="${url}"></audio>`;
-            });
-
-            // Translation form submission
-            document.getElementById('translationForm').addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const text = document.getElementById('textToTranslate').value;
-                const sourceLanguage = document.getElementById('sourceLanguage').value;
-                const targetLanguage = document.getElementById('targetLanguage').value;
-
-                const response = await fetch(`${baseUrl}/translate`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ text, sourceLanguage, targetLanguage })
-                });
-
-                const result = await response.json();
-                document.getElementById('translationResult').innerText = result.translation || result.error;
-            });
-
-            // File upload form submission
-            document.getElementById('fileUploadForm').addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const formData = new FormData();
-                formData.append('file', document.getElementById('fileToUpload').files[0]);
-
-                const response = await fetch(`${baseUrl}/storage/file`, {
-                    method: 'POST',
-                    body: formData
-                });
-
-                const result = await response.json();
-                document.getElementById('fileUploadResult').innerText = result.fileUrl || result.error;
-            });
-
-            // Transcription from URL form submission
-            document.getElementById('transcriptionFromUrlForm').addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const audioUrl = document.getElementById('audioUrl').value;
-                const languageCode = document.getElementById('urlLanguageCode').value;
-
-                const response = await fetch(`${baseUrl}/transcribeFromUrl`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ audioUrl, languageCode })
-                });
-
-                const result = await response.json();
-                document.getElementById('transcriptionFromUrlResult').innerText = result.transcription || result.error;
-            });
-
+          const response = await fetch("http://localhost:3000/translate", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+          });
+          const result = await response.json();
+          document.getElementById("translateResult").innerText =
+            result.translation || result.error;
+        });
     </script>
-</body>
-
+  </body>
 </html>
