--- a/frontend/frontend.html
+++ b/frontend/frontend.html
@@ -181,7 +181,7 @@
           });
           const result = await response.json();
           document.getElementById("synthesizeResult").innerText =
-            result.filePath || result.error;
+            result.fileUrl || result.error;
         });
 
       document
